fix for full bleed promo

--- a/docroot/sites/usanetwork/themes/aurora_usa/sass/design/modules/_full-bleed-promo.scss
+++ b/docroot/sites/usanetwork/themes/aurora_usa/sass/design/modules/_full-bleed-promo.scss
@@ -1,13 +1,15 @@
 #full-bleed-promo {
-  @include clear();
-  margin: 0 auto;
-  position: relative;
-  min-height: 250px;
-//  max-height: 500px;
-  max-width: 1650px;
-  min-width: 300px;
-  @include breakpoint($bp-768-width) {
-    @include clear;
+  .full-bleed-wrapper {
+    @include clear();
+    margin: 0 auto;
+    position: relative;
+    min-height: 250px;
+    //  max-height: 500px;
+    max-width: 1650px;
+    min-width: 300px;
+    @include breakpoint($bp-768-width) {
+      @include clear;
+    }
   }
   .block-content {
     display: block;
